--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,11 @@ jobs:
 
 
       # Setup gradlew and build project
-      - name: Build with Gradle (show deprecation warnings)
+      - name: Give execute permission to Gradle wrapper
+        run: chmod +x ./gradlew
+      
+      - name: Build with Gradle (show deprecation)
         run: ./gradlew build --warning-mode=all
-
-      - name: Setup gradlew and Build
-        run: |
-          chmod +x gradlew
-          ./gradlew build
 
       # Run tests
       - name: Run Tests
