--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@ plugins {
     id 'java'
 }
 
-group 'com.example'
-version '1.0-SNAPSHOT'
+group = 'com.example'
+version = '1.0'
 
 repositories {
     mavenCentral()
 }
+
 
 dependencies {
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
