--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: Web Automation Workflow
+
 on:
   push:
     branches: [ "main" ]
@@ -6,67 +7,51 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: write 
+  contents: write
   pages: write
   id-token: write
 
 jobs:
-  automation-JUnit:
+  automation-tests:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repository
-      - uses: actions/checkout@v4
+      # 1. Checkout repository
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      # Setup Java 17
-      - name: Set up JDK 17
+      # 2. Setup JDK 17
+      - name: Setup JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Install Chrome and ChromeDriver
-      - name: Setup Chrome (versi 126 stabil)
+      # 3. Install Chrome versi stabil (126.0.6478.126)
+      - name: Setup Chrome
         uses: browser-actions/setup-chrome@v1.7.3
-        with:
-          chrome-version: 126.0.6478.126
-
-      - name: Install matching ChromeDriver for Chrome 126
-        run: |
-          VERSION=126.0.6478.126
-          wget https://chromedriver.storage.googleapis.com/${VERSION}/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/chromedriver
-          sudo chmod +x /usr/local/bin/chromedriver
-
-      # Setup gradlew and build project
-      - name: Give execute permission to Gradle wrapper
+       
+      # 4. Grant execute permission to Gradle wrapper
+      - name: Give permission to Gradle wrapper
         run: chmod +x ./gradlew
-      
-      - name: Build with Gradle (show deprecation)
+
+      # 5. Build project with Gradle and show deprecation warnings
+      - name: Build with Gradle
         run: ./gradlew build --warning-mode=all
 
-      # Run tests
+      # 6. Run tests
       - name: Run Tests
-        run: ./gradlew clean test
+        run: ./gradlew test
 
-        
-      - name: Upload Gradle Test Report
+      # 7. Upload test report
+      - name: Upload Test Report
         uses: actions/upload-artifact@v4.6.2
         if: always()
         with:
           name: gradle-test-report
           path: build/reports/tests/test
 
-      # Archive test results (pastikan folder ini sesuai output test Anda)
-      - name: Archive test results
-        uses: actions/upload-artifact@v4.6.2
-        if: always()
-        with:
-          name: Cucumber Reports
-          path: build/reports
-
-      # Deploy to GitHub Pages
+      # 8. Deploy to GitHub Pages (optional)
       - name: Deploy to GitHub Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v4.0.0
