--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,23 @@ jobs:
           distribution: 'temurin'
 
       # 3. Install Chrome versi stabil (126.0.6478.126)
-      - name: Setup Chrome
+      - name: Setup Chrome (v126)
         uses: browser-actions/setup-chrome@v1.7.3
+        with:
+          chrome-version: 126.0.6478.126
+
+      # 4. Remove chromedriver lama jika ada
+      - name: Remove existing chromedriver
+        run: sudo rm -f /usr/local/bin/chromedriver
+
+      # 5. Install ChromeDriver versi 126.0.6478.126
+      - name: Install matching ChromeDriver
+        run: |
+          VERSION=126.0.6478.126
+          wget https://chromedriver.storage.googleapis.com/${VERSION}/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/chromedriver
+          sudo chmod +x /usr/local/bin/chromedriver
        
       # 4. Grant execute permission to Gradle wrapper
       - name: Give permission to Gradle wrapper
