--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,39 +27,25 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # 3. Install Chrome versi stabil (v126)
-      - name: Setup Chrome (v126)
+     # Install Chrome and ChromeDriver (jika diperlukan untuk testing UI)
+      - name: Setup Chrome
         uses: browser-actions/setup-chrome@v1.7.3
         with:
-          chrome-version: 126
+          chrome-version: stable
 
-      # 4. Remove chromedriver lama jika ada
-      - name: Remove existing chromedriver
-        run: sudo rm -f /usr/local/bin/chromedriver
-
-      # 5. Install ChromeDriver versi yang cocok dengan Chrome 126
-      - name: Install matching ChromeDriver
-        run: |
-          VERSION=$(curl -sSL https://chromedriver.storage.googleapis.com/LATEST_RELEASE_126)
-          echo "Installing ChromeDriver version: $VERSION"
-          wget https://chromedriver.storage.googleapis.com/${VERSION}/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
-
-      # 6. Grant execute permission to Gradle wrapper
+      # Grant execute permission to Gradle wrapper
       - name: Give permission to Gradle wrapper
         run: chmod +x ./gradlew
 
-      # 7. Build project with Gradle and show deprecation warnings
+      # Build project with Gradle and show deprecation warnings
       - name: Build with Gradle
         run: ./gradlew build --warning-mode=all
 
-      # 8. Run tests
+      # Run tests
       - name: Run Tests
         run: ./gradlew test
 
-      # 9. Upload test report
+      # Upload test report
       - name: Upload Test Report
         uses: actions/upload-artifact@v4.6.2
         if: always()
@@ -67,7 +53,7 @@ jobs:
           name: gradle-test-report
           path: build/reports/tests/test
 
-      # 10. Deploy to GitHub Pages (optional)
+      # Deploy to GitHub Pages (optional)
       - name: Deploy to GitHub Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v4.0.0
